fix horizontal scroll

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,6 +2,10 @@
 	padding-top: 45px;
 	border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 	padding-bottom: 41px;
+	max-width: 880px;
+	width: 100%;
+	position: relative;
+	margin: 0 auto;
 }
 
 .header__image {
@@ -12,6 +16,10 @@
 @media screen and (min-width: 320px) and (max-width: 760px) {
 	.header {
 		padding-top: 28px;
+		max-width: 880px;
+		width: 100%;
+		position: relative;
+		margin: 0 auto;
 	}
 
 	.header__image {
