--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -119,7 +119,7 @@
 
 @media screen and (min-width: 760px) and (max-width: 1100px) {
 	.profile {
-		margin-top: 40px;
-		margin-bottom: 51px;
+		margin: 40px 0 51px;
+		padding: 0;
 	}
 }
